<resources>
    <string name="app_name">BlackboxVTS</string>
    <string name="gps_setting">GPS Settings</string>
    <string name="gps_not_enable">Please enable Gps Settings.</string>
    <string name="action_settings">Ok</string>
    <string name="Connection_Time_Out">Oops! Error in connecting to server, Please try later.</string>

    <string name="default_notification_channel_id" translatable="false">BlackboxVTS</string>
    <string name="default_notification_channel_name" translatable="true">VTS</string>


    <string name="pms">FMS</string>
    <string name="distance_report">Check Distance traveled by vehicles</string>
    <string name="overspeed_analysis">Check Overspeed analysis</string>
    <string name="overstoppage_analysis">Check Overstop analysis</string>
    <string name="stoppage_analysis">Check Stoppage analysis of vehicle</string>
    <string name="inventory_two">Critical Consumables\nbelow Min. Stock</string>
    <string name="inventory_three">Consumables\nTo Be Expired</string>
    <string name="inventory_four">Expired\nConsumables</string>
    <string name="pending_approval">Pending notifications\nTap here to read</string>
    <string name="pending_bill">Pending bill payments\nTap here to pay</string>
    <string name="pending">Pending</string>
    <string name="closure">Closure</string>
    <string name="initial_office_review">Initial Office Review</string>
    <string name="office_review">Office Review</string>
    <string name="crew">Crew</string>
    <string name="crew_approval_s">Crew Approval\'s</string>
    <string name="dms">DMS</string>
    <string name="e_forms">e-Forms</string>
    <string name="comment_reply">COMMENT/REPLY</string>
    <string name="pending_for_checking">PENDING FOR CHECKING</string>
    <string name="pending_for_approval">Pending for Approval</string>
    <string name="vendor">Vendor</string>
    <string name="jobs">Jobs</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="cancel">Cancel</string>
    <string-array name="selectAction">
        <item>Resend OTP</item>
        <item>Enter OTP Manually</item>
    </string-array>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="welcome">Welcome</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_main">Forgot Password?</string>
    <string name="dashboard">Dashboard</string>
    <string name="live_status">Vehicle Status</string>
    <string name="vehicle_on_map">Live Tracking</string>
    <string name="fleet_report">Fleet Report</string>
    <string name="add_on_report">Add On Report</string>
    <string name="fms">FMS</string>
    <string name="alerts">Alerts Settings</string>
    <string name="geofencing">Geofencing</string>
    <string name="settings">Settings</string>
    <string name="my_bill">My Bill</string>
    <string name="customer_care">Customer Care</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vehicle">Vehicle</string>
    <string name="moving">Moving</string>
    <string name="parked">Parked</string>
    <string name="unreachable">Unreachable</string>
    <string name="towed">Towed</string>
    <string name="see_all_vehicle"><u>All vehicles</u></string>
    <string name="fleet_utilization">Fleet Utilization</string>
    <string name="fuel_analysis">Fuel Analysis</string>
    <string name="higest_mileage">Higest Mileage</string>
    <string name="above_avg">Above Avg.</string>
    <string name="apply">Apply</string>
    <string name="go_back_to_login"><u>Go Back to Login</u></string>
    <string name="unattended">If you feel unattended by our team executives feel free to share your valuable feedback at 9779903124</string>
    <string name="pay_button">Pay</string>
    <string name="merchant_id">Merchant Id</string>
    <string name="currency">Currency</string>
    <string name="amount">Amount</string>
    <string name="redirect_url">Redirect Url</string>
    <string name="cancel_url">Cancel Url</string>
    <string name="rsa_url">RSA Key Url</string>
    <string name="access_code">Access Code</string>
    <string name="title_activity_status">CCAvenueMobile</string>
    <string name="time_out">Connection time out, please try again</string>
    <string name="dns_error">Connectivity issue</string>
    <string name="no_network">No internet available, please try again </string>
    <string name="something_went_wrong">Something went wrong</string>
</resources>