<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryblack">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/margin_25"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/margin_25"
            android:layout_marginVertical="@dimen/margin_30"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xx"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:textSize="@dimen/font_16"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivBackNavigation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xx"
                android:src="@drawable/ic_cancel"
                android:tint="@color/white"
                android:visibility="gone"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="Rajesh Vaidya"
                android:textColor="@color/white"
                android:textSize="@dimen/font_14"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDashboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_30"
                android:drawableStart="@drawable/ic_dashboard"
                android:drawablePadding="@dimen/margin_25"
                android:drawableTint="@color/primary_main_orange"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_vertical"
                android:paddingVertical="@dimen/margin_x"
                android:text="@string/dashboard"
                android:textColor="@color/white"
                android:textSize="@dimen/font_14"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvUsername" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLiveStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_vehiclestatus"
                android:drawablePadding="@dimen/margin_25"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_vertical"
                android:paddingVertical="@dimen/margin_x"
                android:text="Live Status"
                android:textColor="@color/white"
                android:textSize="@dimen/font_14"
                app:drawableTint="@color/secondary_yellow"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDashboard" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvVehicleOnMap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_livetracking"
                android:drawablePadding="@dimen/margin_25"
                android:drawableTint="@color/blue"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_vertical"
                android:paddingVertical="@dimen/margin_x"
                android:text="Vehicle On Map"
                android:textColor="@color/white"
                android:textSize="@dimen/font_14"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLiveStatus" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRoutePlayBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_livetracking"
                android:drawablePadding="@dimen/margin_25"
                android:drawableTint="@color/green"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_vertical"
                android:paddingVertical="@dimen/margin_x"
                android:text="Route Playback"
                android:textColor="@color/white"
                android:textSize="@dimen/font_14"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvVehicleOnMap" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLocateMyVehicle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_bxs_map_pin"
                android:drawablePadding="@dimen/margin_25"
                android:drawableTint="@color/red"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_vertical"
                android:paddingVertical="@dimen/margin_x"
                android:text="Locate My Vehicle"
                android:textColor="@color/white"
                android:textSize="@dimen/font_14"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvRoutePlayBack" />

            <View
                android:id="@+id/vSeperateOne"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="@dimen/margin_x"
                android:background="@color/light_black"
                app:layout_constraintTop_toBottomOf="@+id/tvLocateMyVehicle" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvReports"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_x"
                android:drawableStart="@drawable/ic_fleetreport"
                android:drawablePadding="@dimen/margin_25"
                android:drawableTint="@color/purple"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_vertical"
                android:paddingVertical="@dimen/margin_x"
                android:text="@string/fleet_report"
                android:textColor="@color/white"
                android:textSize="@dimen/font_14"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vSeperateOne" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAddOn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_addon_report"
                android:drawablePadding="@dimen/margin_25"
                android:drawableTint="@color/voilet_red"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_vertical"
                android:paddingVertical="@dimen/margin_x"
                android:text="@string/add_on_report"
                android:textColor="@color/white"
                android:textSize="@dimen/font_14"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvReports" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvGeofencing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_v"
                android:drawableStart="@drawable/ic_geofence"
                android:drawablePadding="@dimen/margin_25"
                android:drawableTint="@color/light_blue"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_vertical"
                android:paddingVertical="@dimen/margin_x"
                android:text="@string/geofencing"
                android:textColor="@color/white"
                android:textSize="@dimen/font_14"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAddOn" />

            <View
                android:id="@+id/vSeperateFMS"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_v"
                android:layout_marginBottom="@dimen/margin_x"
                android:background="@color/light_black"
                app:layout_constraintTop_toBottomOf="@+id/tvGeofencing" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvFMS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_fms"
                android:drawablePadding="@dimen/margin_25"
                android:drawableTint="@color/yellow"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_vertical"
                android:paddingVertical="@dimen/margin_x"
                android:text="@string/fms"
                android:textColor="@color/white"
                android:textSize="@dimen/font_14"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vSeperateFMS" />

            <View
                android:id="@+id/vSeperateTwo"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="@dimen/margin_x"
                android:background="@color/light_black"
                app:layout_constraintTop_toBottomOf="@+id/tvFMS" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAlerts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_x"
                android:drawableStart="@drawable/icnotification"
                android:drawablePadding="@dimen/margin_25"
                android:drawableTint="@color/red"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_vertical"
                android:paddingVertical="@dimen/margin_x"
                android:text="@string/alerts"
                android:textColor="@color/white"
                android:textSize="@dimen/font_14"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vSeperateTwo" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvBill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_bill"
                android:drawablePadding="@dimen/margin_25"
                android:drawableTint="@color/green"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_vertical"
                android:paddingVertical="@dimen/margin_x"
                android:text="@string/my_bill"
                android:textColor="@color/white"
                android:textSize="@dimen/font_14"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAlerts" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAIS140Reminder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_bill"
                android:drawablePadding="@dimen/margin_25"
                android:drawableTint="@color/green"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_vertical"
                android:paddingVertical="@dimen/margin_x"
                android:text="AIS-140 renewal reminder"
                android:textColor="@color/white"
                android:textSize="@dimen/font_14"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvBill" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_settings"
                android:drawablePadding="@dimen/margin_25"
                android:drawableTint="@color/med_grey"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_vertical"
                android:paddingVertical="@dimen/margin_x"
                android:text="@string/settings"
                android:textColor="@color/white"
                android:textSize="@dimen/font_14"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAIS140Reminder" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCustomerCare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_customercare"
                android:drawablePadding="@dimen/margin_25"
                android:drawableTint="@color/teal_200"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_vertical"
                android:paddingVertical="@dimen/margin_x"
                android:text="@string/customer_care"
                android:textColor="@color/white"
                android:textSize="@dimen/font_14"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSettings" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_logout"
                android:drawablePadding="@dimen/margin_25"
                android:drawableTint="@color/white"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_vertical"
                android:paddingVertical="@dimen/margin_x"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:textSize="@dimen/font_14"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCustomerCare" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAppVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/margin_25"
                android:drawableTint="@color/white"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:paddingVertical="@dimen/margin_x"
                android:text="Version - v1.1.10.70"
                android:textColor="@color/white"
                android:textSize="8sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLogout" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>