<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/primaryblack">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_x"
            android:layout_marginTop="@dimen/margin_x"
            android:layout_marginEnd="@dimen/margin_x">

            <RadioButton
                android:id="@+id/rbAll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="@dimen/font_12"
                android:padding="@dimen/margin_v"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:buttonTint="@color/white"
                android:text="All Vehicle"/>
            <RadioButton
                android:id="@+id/rbMoving"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="@dimen/font_12"
                android:padding="@dimen/margin_v"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:buttonTint="@color/white"
                android:text="@string/moving"/>

            <RadioButton
                android:id="@+id/rbParked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="@dimen/font_12"
                android:padding="@dimen/margin_v"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:buttonTint="@color/white"
                android:text="Stopped"/>



            <RadioButton
                android:id="@+id/rbHiSpeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="@dimen/font_12"
                android:padding="@dimen/margin_v"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:buttonTint="@color/white"
                android:text="Hi-Speed"/>

            <RadioButton
                android:id="@+id/rbIgnitionOn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="@dimen/font_12"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/margin_v"
                android:gravity="center_vertical"
                android:buttonTint="@color/white"
                android:text="Ignition On"/>
            <RadioButton
                android:id="@+id/rbUnreach"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="@dimen/font_12"
                android:padding="@dimen/margin_v"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:buttonTint="@color/white"
                android:text="@string/unreachable"/>
            <RadioButton
                android:id="@+id/rbBatteryDisconnection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="@dimen/font_12"
                android:padding="@dimen/margin_v"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:buttonTint="@color/white"
                android:text="Battery Disconnection"/>

        </RadioGroup>

        <!--button for dismissing our dialog-->
        <Button
            android:id="@+id/idBtnDismiss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:layout_marginHorizontal="@dimen/margin_50"
            android:layout_marginBottom="@dimen/margin_20"
            android:text="@string/apply"
            android:fontFamily="@font/poppins_bold"
            android:background="@drawable/rect_curve_box"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>